WIP: Create recyclerview with multiple layouts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,12 @@
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme.FullScreen"
             android:windowSoftInputMode="stateHidden|adjustResize" />
+        <activity
+            android:name=".faith.skyscraper.SkyscraperActivity"
+            android:label="@string/lbl_activity_skyscraper"
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.FullScreen"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
     </application>
 
 </manifest>
