--- a/app/build.gradle
+++ b/app/build.gradle
@@ -153,6 +153,7 @@ dependencies {
     androidTestImplementation androidTestDependencies.uiAutomator
 
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
 }
 
 private Integer generateVersionCode() {
