chore: optimize gradle settings

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -5,3 +5,5 @@ android.enableJetifier=true
 zipStorePath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-5.6.4-all.zip
 android.useAndroidX=true
+org.gradle.daemon=true
+org.gradle.configureondemand=true
