--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -7,3 +7,4 @@ distributionUrl=https\://services.gradle.org/distributions/gradle-5.6.4-all.zip
 android.useAndroidX=true
 org.gradle.daemon=true
 org.gradle.configureondemand=true
+org.gradle.parallel=true
