--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -8,3 +8,6 @@ android.useAndroidX=true
 org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx1536M"
+android.databinding.incremental=true
+kotlin.incremental=true
