--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,6 +154,8 @@ dependencies {
 
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
+
+    implementation 'com.jakewharton.rxbinding4:rxbinding:4.0.0'
 }
 
 private Integer generateVersionCode() {
