temporarily integrate rxfirebase3 into db module

--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation project(':domain')
     implementation project(':service')
     implementation project(':util')
+    // TODO: clean up once RxFirebase3 has successfully been modularised
+    implementation project(':database')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -42,7 +44,6 @@ dependencies {
     implementation firebaseDependencies.rxfirebase
     implementation firebaseDependencies.firebaseauth
     implementation firebaseDependencies.firebasestorage
-    implementation 'com.github.FrangSierra:RxFirebase:1.5.6'
 
     implementation commonDependencies.kotlin
     implementation commonDependencies.rxjava
