--- a/database/build.gradle
+++ b/database/build.gradle
@@ -2,6 +2,19 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
+buildscript {
+    ext {
+        rx_version = "3.0.4"
+        rx_android_version = "3.0.0"
+        firebase_auth_version='19.3.1'
+        firebase_database_version='19.3.0'
+        firebase_storage_version='19.1.1'
+        firebase_firestore_version='21.4.3'
+        firebase_functions_version='19.0.2'
+        firebase_remote_version='19.1.4'
+        support_version = "28.0.3"
+    }
+}
 
 android {
     def globalConfig = rootProject.extensions.getByName("ext")
@@ -50,11 +63,12 @@ dependencies {
     implementation injectionDependencies.koin
 
     //firebase components
-    implementation firebaseDependencies.rxfirebase
-    implementation firebaseDependencies.firebaseauth
-    implementation firebaseDependencies.firestore
-    implementation firebaseDependencies.firebasestorage
-    implementation 'com.github.FrangSierra:RxFirebase:1.5.6'
+    compileOnly "com.google.firebase:firebase-auth:$firebase_auth_version"
+    compileOnly "com.google.firebase:firebase-database:$firebase_database_version"
+    compileOnly "com.google.firebase:firebase-storage:$firebase_storage_version"
+    compileOnly "com.google.firebase:firebase-firestore:$firebase_firestore_version"
+    compileOnly "com.google.firebase:firebase-functions:$firebase_functions_version"
+    compileOnly "com.google.firebase:firebase-config:$firebase_remote_version"
 
     //test
     testImplementation testDependencies.junit
