--- a/database/build.gradle
+++ b/database/build.gradle
@@ -2,20 +2,6 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
-buildscript {
-    ext {
-        rx_version = "3.0.4"
-        rx_android_version = "3.0.0"
-        firebase_auth_version='19.3.1'
-        firebase_database_version='19.3.0'
-        firebase_storage_version='19.1.1'
-        firebase_firestore_version='21.4.3'
-        firebase_functions_version='19.0.2'
-        firebase_remote_version='19.1.4'
-        support_version = "28.0.3"
-    }
-}
-
 android {
     def globalConfig = rootProject.extensions.getByName("ext")
     compileSdkVersion globalConfig["androidCompileSdkVersion"]
@@ -63,12 +49,9 @@ dependencies {
     implementation injectionDependencies.koin
 
     //firebase components
-    compileOnly "com.google.firebase:firebase-auth:$firebase_auth_version"
-    compileOnly "com.google.firebase:firebase-database:$firebase_database_version"
-    compileOnly "com.google.firebase:firebase-storage:$firebase_storage_version"
-    compileOnly "com.google.firebase:firebase-firestore:$firebase_firestore_version"
-    compileOnly "com.google.firebase:firebase-functions:$firebase_functions_version"
-    compileOnly "com.google.firebase:firebase-config:$firebase_remote_version"
+    implementation firebaseDependencies.rxfirebase
+    implementation firebaseDependencies.firebaseauth
+    implementation firebaseDependencies.firestore
 
     //test
     testImplementation testDependencies.junit
