--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,6 +127,7 @@ dependencies {
     implementation uiDependencies.colorpicker
     implementation uiDependencies.viewpager2
     implementation uiDependencies.youtubePlayerView
+    implementation uiDependencies.browser
 
     implementation firebaseDependencies.firebasestorageui
 
