--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@ captures/
 .idea/caches
 .idea/shelf
 .idea/misc.xml
+.idea/compiler.xml
+.idea/modules.xml
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
