--- a/build.gradle
+++ b/build.gradle
@@ -5,23 +5,20 @@ buildscript {
     ext.kotlin_version = '1.3.72'
     ext.gradle_version = '4.0.1'
     ext.oss_licenses_version = '0.9.5'
-    ext.google_services = '4.3.3'
-    ext.fabric_version = '1.31.2'
+    ext.google_services = '4.3.4'
+    ext.crashlytics_version = '2.3.0'
     ext.performance_version = '1.3.1'
     repositories {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
-        maven {
-            url 'https://maven.fabric.io/public'
-        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:${gradle_version}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.gms:google-services:$google_services"
         classpath "com.google.android.gms:oss-licenses-plugin:$oss_licenses_version"
-        classpath "io.fabric.tools:gradle:$fabric_version"
+        classpath "com.google.firebase:firebase-crashlytics-gradle:$crashlytics_version"
         classpath "com.google.firebase:perf-plugin:$performance_version"
 
         // NOTE: Do not place your application dependencies here; they belong
